Added resources/public/vendor to .gitignore
Since (I think) that's where bower installs stuff.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ pom.xml.asc
 /target/
 /checkouts/
 /resources/public/content/.git
+/resources/public/vendor
 .lein-deps-sum
 .lein-repl-history
 .lein-plugins/
