--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,21 @@
 dist: trusty
 language: clojure
 
+cache:
+  directories:
+  - $HOME/.m2
+
 services:
   - docker
 
 stages:
   - build
+
+before_install:
+  - sudo apt-get install python-software-properties
+  - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
+  - sudo apt-get install nodejs
+  - sudo npm install -g bower
 
 jobs:
   include:
